--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     align-items: center;
     justify-content: center;
     color: darkblue;
-    background-color: lightgoldenrodyellow;
+    background-color: lightpink;
     width: 100%;
     max-width: 200px; /* Optional: Set a max width for each item */
     margin: 0 auto;
